[darkmode] fix :root background is inverted on ios.

--- a/explorations/wikipedia/css/varla-varfo.css
+++ b/explorations/wikipedia/css/varla-varfo.css
@@ -527,11 +527,15 @@ b, strong {
 }
 
 
-:root{
+:root {
     background: var(--background);
     color: var(--color);
+}
+
+:root > * { /* That's applied to body. */
     filter: invert(var(--mode-invert, 0))
 }
+
 img {
     /* Invert back; this is quite elegant! */
     filter: invert(var(--mode-invert, 0))
